# ragfromscratch

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
notebook/data/vector_store/: chroma.sqlite3
