[project]
name = "ragfromscratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-code>=0.1.6",
    "langchain-community>=0.4.1",
    "pymupdf>=1.27.2",
    "pypdf>=6.8.0",
]
